# sapphire-hash

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/scripts/: setup.sh
.github/workflows/: cargo_clippy.yml  cargo_test.yml
cli/: Cargo.toml  README.md
cli/src/: argument_parser.rs  main.rs  ui_message_handler.rs
core/: Cargo.toml
core/src/: hash_strategy.rs  lib.rs  report_type.rs  ui_message.rs
core/src/hasher/: file_hasher.rs  mod.rs  recursive_hasher.rs
core/src/report/: mod.rs  report_entry.rs
core/src/report/output/: csv.rs  mod.rs  stdout.rs
examples/: file_examinations.rs
flutter_bridge/: Cargo.toml
flutter_bridge/src/: frb_generated.rs
flutter_bridge/src/api/: hasher.rs  mod.rs
flutter_gui/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_gui/integration_test/: simple_test.dart
flutter_gui/lib/: main.dart  my_app_state.dart
flutter_gui/lib/components/: calculate_button.dart  directory_picker_button.dart  hash_algorithm_dropdown_menu.dart
flutter_gui/lib/pages/: my_home_page.dart
flutter_gui/lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter_gui/lib/rust/api/: hasher.dart
flutter_gui/linux/: CMakeLists.txt  my_application.cc
flutter_gui/linux/flutter/: generated_plugins.cmake
flutter_gui/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_gui/macos/Runner.xcodeproj/: project.pbxproj
flutter_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_gui/macos/Runner/Configs/: AppInfo.xcconfig
flutter_gui/rust_builder/: pubspec.yaml
flutter_gui/rust_builder/android/src/main/: AndroidManifest.xml
flutter_gui/rust_builder/ios/: rust_lib_hash_calculator.podspec
flutter_gui/rust_builder/linux/: CMakeLists.txt
flutter_gui/rust_builder/macos/: rust_lib_hash_calculator.podspec
flutter_gui/rust_builder/windows/: CMakeLists.txt
flutter_gui/test/: widget_test.dart
flutter_gui/windows/: CMakeLists.txt
flutter_gui/windows/flutter/: generated_plugins.cmake
flutter_gui/windows/runner/: Runner.rc  main.cpp
gui/: Cargo.toml
gui/src/: file_dialog.rs  main.rs  report_path.rs  result_formatter.rs
gui/ui/: main_window.slint
gui/ui/components/: grid_button.slint  grid_label.slint  info_text.slint  path_label.slint
gui_flutter/: flutter_rust_bridge.yaml  pubspec.yaml
gui_flutter/integration_test/: simple_test.dart
gui_flutter/lib/: main.dart  my_app_state.dart
gui_flutter/lib/components/: directory_picker_button.dart
gui_flutter/lib/pages/: my_home_page.dart
gui_flutter/lib/src/rust/: frb_generated.dart  frb_generated.web.dart
gui_flutter/lib/src/rust/api/: hasher.dart
gui_flutter/linux/flutter/: generated_plugins.cmake
gui_flutter/macos/Runner.xcodeproj/: project.pbxproj
gui_flutter/rust_builder/android/: build.gradle  settings.gradle
gui_flutter/test/: widget_test.dart
gui_flutter/windows/flutter/: generated_plugins.cmake
scripts/: generate_example_files.sh
src/: argument_parser.rs  file_hash_calculator.rs  file_hasher.rs  hash_strategy.rs  lib.rs  main.rs  recursive_hasher.rs
src/hasher/: file_hasher.rs  mod.rs  recursive_hasher.rs
src/hasher_strategies/: mod.rs
src/report/: mod.rs  report_entry.rs
src/reporter/: mod.rs  report_entry.rs  report_message.rs
