[package]
name = "hash-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
rust-crypto = "^0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
