[package]
name = "recursive_hash_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
rust-crypto = "^0.2"
spinoff = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
