[package]
name = "recursive_hash_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core ##
openssl-sys = "0.9" # Automatically installs OpenSSL
openssl = "0.10"    # Digest and other crypto-related functions
hex = "0.4.3"       # Hexadecimal encoder/decoder

## Async Runtime ##
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

## CLI and Logging ##
clap = { version = "^4", features = ["derive"] } # CLI Argument Parser
spinoff = "0.8.0"                                # CLI Spinners
env_logger = "0.10.0"                            # Logger with support for environment variables
log = "0.4.20"                                   # Logger backbone
