[package]
name = "sapphire-hash"
version = "0.1.0"
edition = "2021"

description = "A recursive, performant file hash calculator."
# homepage = "https://github.com/rhian-cs/sapphire-hash"
license = "MIT"
keywords = ["cryptography", "hash", "sha256", "openssl"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
sapphire-hash-core = { version = "0.1.0", path = "../core" }

## Async Runtime ##
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

## Logging ##
env_logger = "0.10.0" # Logger with support for environment variables
log = "0.4.20"        # Logger backbone

## Utilities ##
clap = { version = "^4", features = ["derive"] } # CLI Argument Parser
thiserror = "1.0.50"                             # Custom Errors
spinoff = "0.8.0"                                # CLI Spinners
