[package]
name = "sapphire-hash-core"
version = "0.1.3"
edition = "2021"

description = "The core of sapphire-hash."
repository = "https://github.com/rhian-cs/sapphire-hash"
license = "MIT"

[dependencies]
## Core ##
openssl-sys = "0.9" # Automatically installs OpenSSL
openssl = "0.10"    # Digest and other crypto-related functions
hex = "0.4.3"       # Hexadecimal encoder/decoder

## Async Runtime ##
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

## Utilities ##
log = "0.4.20"                                      # Logger backbone
strum = { version = "0.25", features = ["derive"] } # Derive utilities for enums
csv = "1.3.0"                                       # CSV Reporting
