[package]
name = "rust_lib_hash_calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
sapphire-hash-core = { path = "../core" }

strum = { version = "*", features = ["derive"] } # Derive utilities for enums
thiserror = "1.0.50"                             # Custom Errors

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
